# simple-router-repo

./: .gitignore  CMakeLists.txt  README.md  cmdline.h  config.h  core.c  core.h  fileIO.c  fileIO.h  main.c  main.cpp  readme.md  router.cpp  router.h
C-ver/: CMakeLists.txt  README.md  config.h  core.c  main.c
C-ver/dataset/data/dataset1/: packet1.txt  packet5.txt  rule1.txt
C/Beginner/CS50_Harvard/Week 3/: note.md  plurality.c  runoff.c  tideman.c
C/Beginner/C_Primer_Plus/Chapter 2/: exercise4.c  exercise5.c  exercise8.c
C/Beginner/C_Primer_Plus/Chapter 3/: exercise2.c
C/Beginner/C_Primer_Plus/Chapter 4/: exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  exercise7.c  exercise8.c
C/Beginner/C_Primer_Plus/Chapter 5/: exercise1.c  exercise2.c  exercise3.c
C/Beginner/C_Primer_Plus/Chapter 6/: exercise1-4.c  exercise18.c
C/daily_codes/: functions.c  pintia.c  test.c  test.cpp
C/daily_codes/AirManager-cmake/: Airline_private.h  CMakeLists.txt  fileIO.c  main.c  nodeFunction.h
C/daily_codes/Airline Manager/: Airline.dev  Airline_private.rc  CMakeLists.txt  fileIO.h  makefile.win
C/daily_codes/algorithms/: highPRE.c  permulation.c  sort.c
data/dataset1/: ans1.txt  ans2.txt  ans3.txt  rule.txt
data/dataset2/: ans1.txt  ans2.txt  ans3.txt  rule.txt
dataset/: README.txt
dataset/data/dataset1/: packet2.txt  packet3.txt  packet4.txt
dataset/data/dataset2/: packet1.txt  packet3.txt  packet4.txt  packet5.txt  rule1.txt
test-makefile/src/: function.c  function.h  main.c  nodeFunction.c
(+30 files in other folders)
